--- a/TeamProject - Katla/styles/Fun-style.css
+++ b/TeamProject - Katla/styles/Fun-style.css
@@ -18,12 +18,12 @@ h1, h2, h3, h4, h5, h6{
 }
 
 .push-content{
-    min-height: 400px;
+    min-height: 420px;
 }
 
 @media (max-width: 768px) {
     .push-content{
-        min-height: 550px;
+        min-height: 570px;
     }
 }
 
@@ -74,12 +74,19 @@ footer.site-footer{
 
 .push-footer{
     width: 100%;
-    min-height: 1100px;
+    min-height: 1120px;
 }
 
 @media (max-width: 1245px) {
     .push-footer{
-        min-height: 1200px;
+        min-height: 1220px;
+    }
+
+}
+
+@media (max-width: 1260px) {
+    .push-footer{
+        min-height: 1260px;
     }
 
 }
@@ -93,7 +100,7 @@ footer.site-footer{
 
 @media (max-width: 745px) {
     .push-footer{
-        min-height: 1400px;
+        min-height: 1420px;
     }
 
 }
